--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "bugs": {
     "url": "https://github.com/IvanNavin/portfolio/issues"
   },
-  "homepage": "https://github.com/IvanNavin/portfolio#readme",
-
+  "homepage": "https://github.com/IvanNavin/portfolio",
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "babel-loader": "^8.2.2",
@@ -32,17 +31,22 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "file-loader": "^6.2.0",
+    "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.0",
     "prettier": "^2.3.2",
     "prettier-quick": "0.0.5",
-    "pug": "^2.0.0",
-    "pug-loader": "^2.4.0",
+    "pug": "^3.0.2",
+    "pug-html-loader": "^1.1.5",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^20.2.1",
+    "@hapi/inert": "^6.0.4"
   }
 }
