--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "build:dev": "cross-env NODE_ENV=development webpack",
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "cross-env NODE_ENV=development webpack server",
-    "start": "node scripts/start.js",
     "lint": "npx eslint src/**/*.js --fix",
     "prettier": "npx prettier --write .",
     "prepare": "husky install"
@@ -42,14 +41,12 @@
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
-    "telegram-bot-api": "^2.0.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
   },
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
-    "@hapi/inert": "^6.0.4",
-    "node-telegram-bot-api": "0.56.0"
+    "@hapi/inert": "^6.0.4"
   }
 }
