--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build:dev": "cross-env NODE_ENV=development webpack",
     "build": "cross-env NODE_ENV=production webpack",
-    "start": "node scripts/start.js",
+    "start": "cross-env NODE_ENV=production webpack && node scripts/start.js",
     "dev": "cross-env NODE_ENV=development webpack server",
     "lint": "npx eslint src/**/*.js --fix",
     "prettier": "npx prettier --write .",
