--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Holovko Ivan Portfolio",
   "scripts": {
-    "build:dev": "cross-env NODE_ENV=development webpack",
-    "build": "cross-env NODE_ENV=production webpack",
+    "build:dev": "npx cross-env NODE_ENV=development webpack",
+    "build": "npx cross-env NODE_ENV=production webpack",
     "start": "node scripts/start.js",
-    "dev": "cross-env NODE_ENV=development webpack server",
+    "dev": "npx cross-env NODE_ENV=development webpack server",
     "lint": "npx eslint src/**/*.js --fix",
     "prettier": "npx prettier --write .",
     "prepare": "npx husky install"
