--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Holovko Ivan Portfolio",
   "scripts": {
     "build:dev": "npx cross-env NODE_ENV=development webpack",
-    "build": "webpack",
+    "build": "npx webpack",
     "start": "node scripts/start.js",
     "dev": "npx cross-env NODE_ENV=development webpack server",
     "lint": "npx eslint src/**/*.js --fix",
@@ -22,33 +22,33 @@
   },
   "homepage": "https://github.com/IvanNavin/portfolio",
   "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "prettier": "^2.3.2",
+    "prettier-quick": "0.0.5"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^20.2.1",
+    "@hapi/inert": "^6.0.4",
     "@babel/core": "^7.14.6",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
-    "eslint": "^7.29.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "file-loader": "^6.2.0",
-    "html-loader": "^3.0.1",
-    "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.0",
-    "prettier": "^2.3.2",
-    "prettier-quick": "0.0.5",
+    "dotenv": "^10.0.0",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0",
     "pug": "^3.0.2",
     "pug-html-loader": "^1.1.5",
     "sass": "^1.35.1",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.0.0",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
-  },
-  "dependencies": {
-    "@hapi/hapi": "^20.2.1",
-    "@hapi/inert": "^6.0.4",
-    "dotenv": "^10.0.0"
+    "file-loader": "^6.2.0",
+    "html-loader": "^3.0.1",
+    "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.0"
   }
 }
